@@ -130,6 +130,7 @@ import org.alfresco.service.cmr.model.FileExistsException;
 import org.alfresco.service.cmr.model.FileFolderService;
 import org.alfresco.service.cmr.model.FileInfo;
 import org.alfresco.service.cmr.model.FileNotFoundException;
+import org.alfresco.service.cmr.preference.PreferenceService;
 import org.alfresco.service.cmr.repository.AssociationExistsException;
 import org.alfresco.service.cmr.repository.ChildAssociationRef;
 import org.alfresco.service.cmr.repository.ContentData;
@@ -807,8 +808,9 @@ public class NodesImpl implements Nodes
     {
         String path = parameters.getParameter(PARAM_RELATIVE_PATH);
         NodeRef nodeRef = validateOrLookupNode(nodeId, path);
+        Node node = getFolderOrDocumentFullInfo(nodeRef, null, null, parameters);
+        return node;
 
-        return getFolderOrDocumentFullInfo(nodeRef, null, null, parameters);
     }
 
     private Node getFolderOrDocumentFullInfo(NodeRef nodeRef, NodeRef parentNodeRef, QName nodeTypeQName, Parameters parameters)
@@ -910,6 +912,12 @@ public class NodesImpl implements Nodes
         {
             boolean isLocked = isLocked(nodeRef, aspects);
             node.setIsLocked(isLocked);
+        }
+
+        if (includeParam.contains(PARAM_INCLUDE_ISFAVORITE))
+        {
+            boolean isFavorite = isFavorite(nodeRef);
+            node.setIsFavorite(isFavorite);
         }
 
         if (includeParam.contains(PARAM_INCLUDE_ALLOWABLEOPERATIONS))
@@ -1318,7 +1326,6 @@ public class NodesImpl implements Nodes
                 {
                     calculateRelativePath(parentFolderNodeId, node);
                 }
-
                 return node;
             }
 
@@ -1368,7 +1375,7 @@ public class NodesImpl implements Nodes
         {
             sourceEntity = getFolderOrDocumentFullInfo(parentNodeRef, null, null, null, mapUserInfo);
         }
-
+ 
         return CollectionWithPagingInfo.asPaged(paging, nodes, pagingResults.hasMoreItems(), pagingResults.getTotalResultCount().getFirst(), sourceEntity);
     }
 
@@ -1823,7 +1830,7 @@ public class NodesImpl implements Nodes
         String str = parameters.getParameter(PARAM_VERSION_MAJOR);
         if (str != null)
         {
-            versionMajor = new Boolean(str);
+            versionMajor = Boolean.valueOf(str);
         }
         String versionComment = parameters.getParameter(PARAM_VERSION_COMMENT);
 
@@ -2649,7 +2656,7 @@ public class NodesImpl implements Nodes
         String str = parameters.getParameter(PARAM_VERSION_MAJOR);
         if (str != null)
         {
-            versionMajor = new Boolean(str);
+            versionMajor = Boolean.valueOf(str);
         }
         String versionComment = parameters.getParameter(PARAM_VERSION_COMMENT);
 
@@ -3338,6 +3345,44 @@ public class NodesImpl implements Nodes
         }
         return duplicate;
     }
+    
+    /**
+     * 
+     * @param node
+     */
+    private boolean isFavorite(NodeRef node)
+    {
+        PreferenceService preferenceService = (PreferenceService) sr.getService(ServiceRegistry.PREFERENCE_SERVICE);
+        String currentUserName = AuthenticationUtil.getFullyAuthenticatedUser();
+        Map<String, Serializable> preferences = preferenceService.getPreferences(currentUserName);
+
+        for (Serializable nodesFavorites : preferences.values())
+        {
+            if (nodesFavorites instanceof String)
+            {
+                StringTokenizer st = new StringTokenizer((String) nodesFavorites, ",");
+                while (st.hasMoreTokens())
+                {
+                    String nodeRefStr = st.nextToken();
+                    nodeRefStr = nodeRefStr.trim();
+
+                    if (!NodeRef.isNodeRef((String) nodeRefStr))
+                    {
+                        continue;
+                    }
+
+                    NodeRef nodeRef = new NodeRef((String) nodeRefStr);
+
+                    if (nodeRef.equals(node))
+                    {
+                        return true;
+                    }
+                }
+            }
+        }
+        return false;
+    }
+    
 
     /**
      * @author Jamal Kaabi-Mofrad
